# screencap

./: pyproject.toml
screencap/: __init__.py  area.py  capture.py  geometry.py  grabber.py  image.py  image_view.py  main.py  pids.py  previews.py  processor.py  thread.py  utils.py  viewer.py  window.py
screencap/image/: __init__.py  image.py  viewer.py
screencap/pids/: __init__.py  manager.py  selection_ui.py  selector.py
